--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -1,7 +1,14 @@
 .nav-row {
-    display: flex
+    display: flex;
+    background-color: rgb(68, 177, 250)
 }
 
 .nav-col {
-    margin: 10px 15px
+    margin: 15px 15px
+}
+
+.nav-anchor {
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
 }
