--- a/src/RecipeShow/recipeShow.css
+++ b/src/RecipeShow/recipeShow.css
@@ -20,3 +20,14 @@
 #recipe-show-servings-col{
     font-style: italic;
 }
+
+#edit-recipe-button{
+    margin: 10px;
+    padding: 5px 10px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(68, 177, 250) ;
+    color: white;
+    font-size: 15px;
+    border: none;
+}
