--- a/src/RecipeList/recipeList.css
+++ b/src/RecipeList/recipeList.css
@@ -5,13 +5,17 @@
 .recipe-list-row{
     display: flex;
     width: 100%;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 50%;
 }
 
 .recipe-list-col{
-    margin: 0 auto;
+    
+    margin: 10px auto;
     text-decoration: none;
     color: black;
-    box-shadow: 0px 3px 6px 0 rgb(107, 107, 107);
+    box-shadow: 0px 3px 6px 0 rgb(164, 161, 161);
 }
 
 .welcome-header{
@@ -32,4 +36,8 @@
 
 .recipe-image{
     width: 200px
+}
+
+.recipe-name{
+    text-transform: capitalize;
 }
