--- a/src/Register/register.css
+++ b/src/Register/register.css
@@ -62,3 +62,16 @@ input {
 #login-header{
     color:  white
 }
+
+#cancel-login-row{
+    display: flex;
+    position: absolute;
+    cursor: pointer;
+}
+
+#cancel-x{
+    padding: 2px 6px;
+    border-radius: 20%;
+    border: 1px solid white;
+    color: white
+}
