--- a/src/RecipeList/recipeList.css
+++ b/src/RecipeList/recipeList.css
@@ -11,7 +11,7 @@
 }
 
 .recipe-list-col{
-    
+  
     margin: 10px auto;
     text-decoration: none;
     color: black;
@@ -35,7 +35,10 @@
 }
 
 .recipe-image{
-    width: 200px
+    max-height: 200px;
+    overflow: hidden;
+    width: 200px;
+
 }
 
 .recipe-name{
