--- a/src/ShowUser/showUser.css
+++ b/src/ShowUser/showUser.css
@@ -3,8 +3,13 @@
 }
 
 #user-recipes-row{
+    /* width: 100%;
+    display: flex */
+    display: flex;
     width: 100%;
-    display: flex
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 50%;
 }
 
 #user-recipes-col{
