--- a/src/Register/register.css
+++ b/src/Register/register.css
@@ -29,7 +29,7 @@ input {
 }
 
 #login-container{
-    background-image: url("./images/register-ingredients.jpg");
+    /* background-image: url("./images/register-ingredients.jpg"); */
     background-size: cover;
     height: 100%;
 }
