--- a/src/ShowUser/showUser.css
+++ b/src/ShowUser/showUser.css
@@ -32,3 +32,11 @@
 #avatar-row{
     margin: 40px 0 20px 0
 }
+
+.recipe-image{
+    max-width: 200px;
+    max-height: 150px;
+    min-width: 200px;
+    min-height: 150px;
+    object-fit:cover;
+}
