--- a/src/RecipeShow/recipeShow.css
+++ b/src/RecipeShow/recipeShow.css
@@ -39,10 +39,13 @@
 }
 #recipe-show-directions-col{
     text-align: justify;
-    margin: 15px;
+    margin: 0 auto;
+    width: 80%
 
 }
 .heading-color{
     background-color: black;
     color: white;
+    margin: 0 auto;
+
 }
