--- a/src/RecipeList/recipeList.css
+++ b/src/RecipeList/recipeList.css
@@ -17,11 +17,26 @@
     animation: fade-in-bottom 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
+.welcome-row{
+  background-image: url("https://images.unsplash.com/photo-1514516870926-20598973e480?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=772&q=80");
+  background-size: cover;
+  padding: 30px 0;
+  margin-bottom: 30px;
+}
+
+.welcome-layer{
+  background-color: rgba(255, 255, 255, 0.534);
+  width: 70%;
+  margin: 0 auto;
+  padding: 30px 30px 10px 30px;
+}
+
 .welcome-header{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 50px;
-    margin: 20px auto;
+    margin: 0 auto;
+    color: black
 }
 
 .welcome-message{
@@ -30,7 +45,7 @@
     padding: 0 20px;
     width: 60%;
     margin: 40px auto;
-    margin-top: 20px !important;
+    color: black
 }
 
 .recipe-image{
