--- a/src/RecipeList/recipeList.css
+++ b/src/RecipeList/recipeList.css
@@ -15,6 +15,7 @@
     box-shadow: 0px 3px 6px 0 rgb(164, 161, 161);
     -webkit-animation: fade-in-bottom 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: fade-in-bottom 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    max-width: 200px;
 }
 
 .welcome-row{
